# cloudmon-plugin-smtp

./: Cargo.toml  Dockerfile  Dockerfile.buster  zuul.yaml
grafana/dashboard/: smtp.json
grafana/dashboards/: smtp.yaml
src/: main.rs
